# streetvision-subnet

./: Dockerfile.miner  Dockerfile.validator  README.md  pyproject.toml  requirements.miner.txt  requirements.txt  requirements.validator-full.txt  requirements.validator.txt  setup_env.sh  start_synthetic_generator.sh  start_validator.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  Mining.md  PROJECT_STATUS.md  TASKS.md  TECH_DECISIONS.md  Validating.md  WORKFLOW.md  architecture.md  code-of-conduct.md  code-review.md  contribution.md  datasets.md  dev_plan.md  incentive.md  project-status.md  specifications.md  subnet-halt.md  tasks.md  tech-decisions.md  validating.md  workflow.md
natix/: __init__.py  constants.py  protocol.py
natix/base/: miner.py  miner_performance_tracker.py  validator.py
natix/miner/: README.md  config.py  neuron.py  registry.py
natix/miner/datasets/: base_dataset.py  download_data.py  image_dataset.py  real_fake_dataset.py  util.py
natix/miner/detectors/: __init__.py  feature_detector.py  roadwork_detector.py  vit_detector.py
natix/miner/detectors/configs/: ViT_roadwork.yaml  constants.py  roadwork.yaml
natix/miner/gating_mechanisms/: __init__.py  gate.py  gating_mechanism.py  roadwork_gate.py
natix/miner/gating_mechanisms/utils/: __init__.py  face_utils.py
natix/synthetic_data_generation/: prompt_generator.py  synthetic_data_generator.py
natix/utils/: config.py  image_transforms.py  mock.py
natix/validator/: api_client.py  config.py  forward.py  monitoring.py  utils.py  verify_models.py
natix/validator/challenge/: __init__.py  api_task.py  augmentation.py  selector.py
natix/validator/proxy/: __init__.py  proxy.py  task_distributor.py
natix/validator/scoring/: __init__.py  reward.py
natix/validator/scripts/: run_data_generator.py
natix/validator/synthetic/: README.md  __init__.py  config.py  image_utils.py  prompt_generator.py  prompt_utils.py  synthetic_data_generator.py
neurons/: miner.py  validator.py  validator_proxy.py
scripts/: autoupdate_miner_steps.sh  autoupdate_validator_steps.sh  ecosystem.miner.config.js  ecosystem.validator.config.js  run_neuron.py  setup_env.sh  start_cache_updater.sh  start_miner.sh  start_validator.sh
tests/: test_forward.py  test_miner.py
tests/fixtures/: image_transforms.py  mock_validator.py
tests/validator/: test_generate_image.py  test_verify_models.py
