[project]
name = "natix"
version = "2.0.4"
description = ""
requires-python = ">=3.10,<3.12"

dependencies = [
    "bittensor>=9.9.0,<10.0.0",
    "bittensor-cli>=9.18.0,<10.0.0",
    "httpx>=0.28.0",
    "pillow>=10.4.0",
    "loguru>=0.7.2",
    "h11>=0.16.0",
    "cryptography>=46.0.3",
    "cyscale>=0.3.3",
    "pyyaml>=6.0",
    "numpy>=1.26.0,<2.0",
]

[project.optional-dependencies]

# Run a miner node (model inference)
miner = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "timm>=1.0.12",
    "ultralytics>=8.3.44",
    "scikit-learn>=1.5.2",
    "opencv-python>=4.10.0.84",
    "scikit-image>=0.24.0",
]

# Run a validator node — core loop, scoring, organic proxy (no DL, no heavy image processing)
validator = [
    "wandb>=0.19.0",
    "joblib>=1.4.2",
    "tensorboardx>=2.6.2.2",
]

# Validator image pipeline — HuggingFace cache download + augmentation
# Install alongside [validator] for a fully functional validator without synthetic generation
validator-image = [
    "datasets>=3.1.0",
    "opencv-python>=4.10.0.84",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
]

# Validator synthetic image generation — diffusion models, runs as a separate background process
# Optional: validator runs fine without this (uses real images from cache + API tasks only)
validator-synthetic = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "transformers>=4.45.0,<4.46.0",
    "diffusers>=0.32.2",
    "accelerate>=1.2.0",
    "sentencepiece>=0.2.0",
    "timm>=1.0.12",
    "einops>=0.8.0",
    "datasets>=3.1.0",
    "scikit-learn>=1.5.2",
]

# Development tools
dev = [
    "pre-commit>=4.0.1",
    "pre-commit-hooks==5.0.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "flake8>=7.1.1",
    "flake8-pyproject~=1.2.3",
    "pytest>=8.3.3",
    "hypothesis>=6.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# base_miner/ will move to natix/miner/ in Step 4 — remove it from here at that point
packages = ["natix", "base_miner", "neurons"]

[tool.black]
line-length = 130
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 130
skip_gitignore = true
skip = [
    ".venv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "*/examples/*",
    "docs/*",
    ".venv/*",
    ".mypy_cache/*",
    "build/*",
    "dist/*",
    ".vscode/*",
    "__init__.py",
]
max-complexity = 15
max-line-length = 130
